# murasame-chan-desktop-pet

./: .env  Cargo.toml  README.md  dataset.json  dataset_murasame-chan.json  prompt_template.txt  system_prompt_template.txt
ai/: Cargo.toml
ai-cli/: Cargo.toml
ai-cli/src/: cli.rs  lib.rs  main.rs
ai/src/: chat.rs  dataset.rs  lib.rs  llm.rs  model.rs  prompt.rs  source_set.rs  utils.rs
ai/src/llm/: gemini.rs
ai/src/model/: response.rs
frontend/: Cargo.toml
frontend/src/: gui.rs  lib.rs  main.rs
layer-composer/: Cargo.toml
layer-composer-cli/: Cargo.toml
layer-composer-cli/src/: cli.rs  lib.rs  main.rs
layer-composer/src/: compose.rs  lib.rs  metadata.rs  model.rs
resources/: dataset.json  system_instruction_template.txt
scripts/: batch_conv_tlg_to_png.py  batch_unpack_scn.py  layer_editor.py  model_editor.py  scn_text_extractor.py
tts/: Cargo.toml
tts-cli/: Cargo.toml
tts-cli/src/: cli.rs  lib.rs  main.rs
tts-client/: Cargo.toml
tts-client/src/: client.rs  lib.rs
tts/src/: client.rs  config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
tts/src/handler/: tts.rs
tts/src/scope/: tts.rs
vtuber/: Cargo.toml
vtuber/src/: bus.rs  config.rs  gui.rs  lib.rs  main.rs  server.rs  startup.rs  utils.rs
vtuber/src/handler/: comments.rs
vtuber/src/scope/: comments.rs
