[package]
name = "layer-composer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
layer-composer = { path = "../layer-composer" }
image = "0.25.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
