[package]
name = "vtuber"
version = "0.1.0"
edition = "2024"

[dependencies]
tts-client = { path = "../tts-client" }
ai = { path = "../ai" }
layer-composer = { path = "../layer-composer" }
anyhow = "1.0.99"
eframe = "0.32.3"
image = "0.25.8"
reqwest = "0.12.23"
dotenvy = "0.15.7"
zip = "5.1.1"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
bytes = "1.10.1"
env_logger = "0.11.8"
log = "0.4.28"
rodio = { version = "0.21.1", default-features = true }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
